Configs/vscodium/.config/VSCodium/logs/20251109T113724/window1/renderer.log
2025-11-09 11:37:26.248 [info] Started local extension host with pid 103681.
2025-11-09 11:37:27.999 [error] Cannot read properties of undefined (reading 'extensionId'): TypeError: Cannot read properties of undefined (reading 'extensionId')
    at t (vscode-file://vscode-app/opt/vscodium-bin/resources/app/out/vs/workbench/workbench.desktop.main.js:4070:2745)
    at tIt.recommendRemoteExtensionIfNeeded (vscode-file://vscode-app/opt/vscodium-bin/resources/app/out/vs/workbench/workbench.desktop.main.js:4070:3495)
2025-11-09 11:37:29.122 [info] [perf] Render performance baseline is 32ms
2025-11-09 11:40:57.010 [error] [Extension Host] SyntaxError: unknown: Expected corresponding JSX closing tag for <summary> (270:11)

  268 | <MDXTag name="p" components={components}><MDXTag name="a" components={components} parentName="p" props={{"href":"https://yalter.github.io/niri/Configuration%3A-Layer-Rules.html"}}>{`Niri's layer rules wiki page.`}</MDXTag></MDXTag>
  269 | <MDXTag name="p" components={components}><MDXTag name="a" components={components} parentName="p" props={{"href":"https://github.com/DreamMaoMao/mangowc/wiki#layer-rules"}}>{`MangoWC's layer rules wiki page.`}</MDXTag></MDXTag>
> 270 |            </MDXTag>
      |            ^
  271 |   }
  272 | }
  273 | MDXContent.isMDXComponent = true
	at jsx.raise (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:3831:17)
	at jsx.jsxParseElementAt (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:3514:16)
	at jsx.jsxParseElementAt (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:3487:32)
	at jsx.jsxParseElement (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:3540:17)
	at jsx.parseExprAtom (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:3547:19)
	at jsx.parseExprSubscripts (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:5862:23)
	at jsx.parseMaybeUnary (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:5842:21)
	at jsx.parseExprOps (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:5729:23)
	at jsx.parseMaybeConditional (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:5702:23)
	at jsx.parseMaybeAssign (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:5647:21)
	at jsx.parseExpression (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:5595:23)
	at jsx.parseReturnStatement (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7617:28)
	at jsx.parseStatementContent (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7295:21)
	at jsx.parseStatement (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7243:17)
	at jsx.parseBlockOrModuleBlockBody (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7810:25)
	at jsx.parseBlockBody (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7797:10)
	at jsx.parseBlock (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7786:10)
	at jsx.parseFunctionBody (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:6876:24)
	at jsx.parseFunctionBodyAndFinish (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:6860:10)
	at jsx.parseMethod (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:6804:10)
	at jsx.pushClassMethod (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:8200:30)
	at jsx.parseClassMemberWithIsStatic (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:8125:12)
	at jsx.parseClassMember (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:8067:10)
	at /home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:8022:14
	at jsx.withTopicForbiddingContext (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7150:14)
	at jsx.parseClassBody (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7999:10)
	at jsx.parseClass (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7973:10)
	at jsx.parseExportDefaultExpression (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:8394:19)
	at jsx.parseExport (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:8299:31)
	at jsx.parseStatementContent (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7347:27)
	at jsx.parseStatement (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7243:17)
	at jsx.parseBlockOrModuleBlockBody (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7810:25)
	at jsx.parseBlockBody (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7797:10)
	at jsx.parseTopLevel (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:7181:10)
	at jsx.parse (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:8660:17)
	at parse (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/parser/lib/index.js:10660:38)
	at parser (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/core/lib/transformation/normalize-file.js:170:34)
	at normalizeFile (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/core/lib/transformation/normalize-file.js:138:11)
	at runSync (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/core/lib/transformation/index.js:44:43)
	at runAsync (/home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/core/lib/transformation/index.js:35:14)
	at /home/claymorwan/.local/share/codium/extensions/xyc.vscode-mdx-preview-0.3.3/node_modules/@babel/core/lib/transform.js:34:34
	at process.processTicksAndRejections (node:internal/process/task_queues:85:11)
